# coa

./: README.md
lab1/dragon-tiger/: fibonacci.tig  read_unsigned.tig  regexp1.txt  regexp2.txt
lab2/dragon-tiger/src/ast/: Makefile.in  evaluator.cc  evaluator.hh
lab2/dragon-tiger/src/driver/: driver.cc
lab2/dragon-tiger/src/parser/: tiger_lexer.ll  tiger_parser.yy
lab3/dragon-tiger/src/ast/: binder.cc  binder.hh
lab4/dragon-tiger/: config.h.in
lab4/dragon-tiger/src/: Makefile.am  Makefile.in
lab4/dragon-tiger/src/ast/: binder.hh  nodes.hh
lab4/dragon-tiger/src/driver/: Makefile.am  Makefile.in  driver.cc
lab4/dragon-tiger/src/irgen/: Makefile.am  Makefile.in  irgen-visitor.cc  irgen.cc  irgen.hh
lab4/dragon-tiger/tests/: README.md  for.tig  funcall.tig  run.sh  run_rec.sh  while.tig
lab4/dragon-tiger/tests/demo/: assign.tig.ll  for.tig.ll  ite.tig.ll  nested_if.tig.ll  while.tig.ll  while_if.tig.ll
lab4/tests/: README.md  assign.tig  funcall.tig  ite.tig  mut_rec.tig  nested_for.tig  nested_if.tig  rec_func.tig  run.sh  run_rec.sh  while.tig  while_if.tig
lab4/tests/demo/: assign.tig.ll  funcall.tig.ll  mut_rec.tig.ll  nested_for.tig.ll  nested_if.tig.ll  rec_func.tig.ll  while.tig.ll  while_if.tig.ll
